# syllabalizer

./: .gitignore  Makefile  README.md  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
indicsyllabifier/: __init__.py  core.py
indicsyllabifier/templates/: indicsyllabifier.html
libindic/syllabifier/: __init__.py  core.py
libindic/syllabifier/templates/: indicsyllabifier.html  libindic.syllabifier.html  syllabifier.html
libindic/syllabifier/tests/: test_indicsyllabifier.py
syllabalizer/: core.py
syllabalizer/templates/: syllabalizer.html
syllabizer/: __init__.py  core.py
tests/: indcsyllabifier_test.py
