[metadata]
name = libindic-syllabifier
summary = Syllabify each word in given text
description-file =
  README.md
author = Baiju M
author-email = baiju.m.mail@gmail.com
home-page = http://libindic.org
classifier =
  #Environment :: Web Environment
  #Framework :: Flask
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Programming Language :: Python
  Programming Language :: Python :: 3

[files]
namespace_packages = libindic
packages = libindic

[build-sphinx]
all_files = 1
source-dir = docs

[wheel]
universal = 1
